chore: fist implementation of some use cases
