# src/modules/coreHttpApi/controllers/AttributesController.ts
@@ -30,7 +30,7 @@ export class AttributesController extends BaseController {
         if (typeof request?.content?.owner !== "undefined") delete request.content.owner;
         if (request?.content?.["@type"] === "IdentityAttribute") delete request.content["@type"];
 
-        const result = await this.consumptionServices.attributes.createIdentityAttribute(request);
+        const result = await this.consumptionServices.attributes.createRepositoryAttribute(request);
         return this.created(result);
     }
 
@@ -45,7 +45,7 @@ export class AttributesController extends BaseController {
         const predecessor = result.value;
 
         if (predecessor.content["@type"] === "IdentityAttribute") {
-            const result = await this.consumptionServices.attributes.succeedIdentityAttribute({
+            const result = await this.consumptionServices.attributes.succeedRepositoryAttribute({
                 predecessorId: predecessorId,
                 ...request
             });
@@ -63,7 +63,7 @@ export class AttributesController extends BaseController {
     @Path("/:attributeId/NotifyPeer")
     @Accept("application/json")
     public async notifyPeerAboutIdentityAttributeSuccession(@PathParam("attributeId") attributeId: string, request: any): Promise<Return.NewResource<Envelope>> {
-        const result = await this.consumptionServices.attributes.notifyPeerAboutIdentityAttributeSuccession({ attributeId: attributeId, peer: request.peer });
+        const result = await this.consumptionServices.attributes.notifyPeerAboutRepositoryAttributeSuccession({ attributeId: attributeId, peer: request.peer });
         return this.created(result);
     }
 
@@ -71,6 +71,42 @@ export class AttributesController extends BaseController {
     @Accept("application/json")
     public async getAttributes(@Context context: ServiceContext): Promise<Envelope> {
         const result = await this.consumptionServices.attributes.getAttributes({ query: context.request.query });
+        return this.ok(result);
+    }
+
+    @GET
+    @Path("/Own/Repository")
+    @Accept("application/json")
+    public async getOwnRepositoryAttributes(@Context context: ServiceContext): Promise<Envelope> {
+        const onlyLatestVersionsQuery = context.request.query.onlyLatestVersions;
+        const onlyLatestVersions: boolean | undefined = typeof onlyLatestVersionsQuery === "string" ? onlyLatestVersionsQuery === "true" : false;
+        const result = await this.consumptionServices.attributes.getRepositoryAttributes({
+            onlyLatestVersions
+        });
+        return this.ok(result);
+    }
+
+    @GET
+    @Path("/Own/Shared")
+    @Accept("application/json")
+    public async getOwnSharedIdentityAttributes(@Context context: ServiceContext): Promise<Envelope> {
+        const urlQuery = context.request.query;
+
+        const query: Record<string, any> = {};
+
+        Object.entries(urlQuery).forEach(([key, value]) => {
+            if (key.startsWith("query.")) {
+                query[key.replace("query.", "")] = typeof value === "string" ? value : "";
+            }
+        });
+
+        const result = await this.consumptionServices.attributes.getOwnSharedAttributes({
+            peer: typeof urlQuery.peer === "string" ? urlQuery.peer : "",
+            hideTechnical: typeof urlQuery.hideTechnical === "string" ? urlQuery.hideTechnical === "true" : false,
+            query: query,
+            onlyLatestVersions: typeof urlQuery.onlyLatestVersions === "string" ? urlQuery.onlyLatestVersions === "true" : false,
+            onlyValid: typeof urlQuery.onlyValid === "string" ? urlQuery.onlyValid === "true" : false
+        });
         return this.ok(result);
     }
 
